# mocktheapi

./: CMakeLists.txt  LICENSE  README.md  Request.cpp  Request.h  RequestResponse.cpp  RequestResponse.h  RequestResponseJsonSerializer.cpp  RequestResponseJsonSerializer.h  Response.cpp  Response.h  main.cpp
testData/: GETemployeeId123.json
